style.css
/**** Colors 
#EEEEEE #00ADB5 #393E46 #222831
*****/

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  margin: 0;
  padding: 0;
}

body {
  background: #d6cab0;
  min-height: 80vh;
  margin-top: 100px;
  display: grid;
  place-content: center;
}

h1 {
  text-align: center;
  color: #282726;
  text-transform: uppercase;
  letter-spacing: 2px;
  word-spacing: 1px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  margin-bottom: 50px;
}

.calculator {
  display: grid;
  align-content: center;
  justify-content: center;
  grid-template-columns: repeat(4, 60px);
  grid-template-rows: minmax(100px, auto) repeat(5, 60px);
  background: #86817c; 
  padding: 15px 10px;
  border-radius: 15px;
  grid-row-gap: 5px;
  grid-column-gap: 5px;
}

.span {
  grid-column: span 2;
}

.console {
  grid-column: 1 / -1;
  background: #282726;
  display: flex;
  align-items: flex-end;
  justify-content: space-around;
  flex-direction: column;
  padding: 10px;
  margin-bottom: 5px;
  border-radius: 10px;
  word-wrap: break-word;
  word-break: break-all;
}

button {
  outline: none;
  border: none;
  border-radius: 10px;
  background-color: #54504c;
  color: #fff;
  font-weight: 700;
}

.func {
  background: #d6cab0;
  color: #000;
}

button:hover {
  background: #282726;
}

.func:hover {
  background: #f8f4e9;
}

.main-console {
  align-self: flex-end;
  font-size: 2rem;
  font-weight: 800;
  color: #d6cab0;
}

.result-console {
  font-size: 1rem;
  font-weight: 800;
  color: #fff;
}

.footer {
  margin-top: 50px;
  bottom: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  padding: 10px;
  font-size: 20px;
  color: #000;
  font-weight: 300;
}

.fa-github {
  color: #000;
  font-size: 24px;
  transition: transform 0.3s ease-in-out;
}

.fa-github:hover {
  transform: rotate(360deg) scale(1.2);
}

